testsuite/tests/source/errors/demo1.gpr

project Demo1 is
   for Source_Dirs use ("src1");
   for Object_Dir use "obj";

   package Naming is
      for Body ("1pck") use "1pck.adb";
   end Naming;

end Demo1;
